feat: add primary movie poster handling and fallback in AdminAutoScheduleCreatePage